<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>ros2_python_extension</name>
  <version>1.0.0</version>
  <description>Code to create python extensions for ROS2</description>

  <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pybind11_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
